@@ -15,6 +15,7 @@
 
 #include "testS.h"
 #include "tao/Messaging/Messaging.h"
+#include "tao/TAOA.h"
 #include "ace/Get_Opt.h"
 #include "ace/Read_Buffer.h"
 
