@@ -3,6 +3,7 @@
 #include "TestC.h"
 #include "tao/Messaging/Messaging.h"
 #include "tao/TAOC.h"
+#include "tao/TAOA.h"
 #include "ace/Get_Opt.h"
 #include "ace/OS_NS_sys_time.h"
 
